--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "stemfactory",
+  "name": "stemfactory-tutoring",
   "version": "1.0.0",
-  "description": "Tutoring website for Maths and Physics",
+  "description": "STEM tutoring website with booking system",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2",
-    "sqlite3": "^5.1.7"
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
